# hypal-predictor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  exp0.py  main.py  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
experiments/: .gitignore
experiments/exp_0/: main.py
experiments/exp_embedded_gyro/: .gitignore  convert.py  main.py
experiments/exp_indoor_co2/: convert.py  extend.py  main.py
experiments/exp_indoor_temp/: .gitignore  convert.py  main.py
experiments/exp_outdoor_press/: convert.py  main.py
experiments/exp_outdoor_temp/: .gitignore  convert.py  main.py
src/: __init__.py  model_m.py  timeframe_m.py  val.py  worker.py
src/dbag/: __init__.py  reader.py
src/hypal_predictor/: config.py  critical_zone.py  dbag.py  ema.py  experiment.py  manager.py  metrics.py  model.py  model_m.py  model_state.py  normalizer.py  predictor.py  timeframe.py  timeframe_m.py  utils.py  val.py
src/hypal_predictor/builtin/: __init__.py  boosting.py  linear.py  transformer.py
src/hypal_predictor/core/: aggregator.py  buffer.py  model_factory.py  model_store.py  notifier.py  predictor.py  registry.py  signal_aggregator.py
src/hypal_predictor/dataset/: time_series_dataset.py
src/hypal_predictor/db/: engine.py  models.py
src/hypal_predictor/dbag/: reader.py
src/metrics/: metrics.py
src/model/: base.py  torch.py
src/routes/: candle.py  timeframe.py
src/utils/: __init__.py  utils.py
tests/: test_models.py  test_predictor.py
(+60 files in other folders)
