[project]
name = "hypal-predictor"
version = "0.1.0"
description = "Data predictor for HyperAnalyzer"
readme = "README.md"
authors = [
    {name = "Maksim Shushkevich", email = "m.e.shushkevich@yandex.com"}
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "hypal-utils",
    "numpy>=2.4.1",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[tool.uv.sources]
hypal-utils = { git = "https://github.com/EE-HyperAnalyzer/hypal_utils.git" }

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
