[project]
name = "hypal-predictor"
version = "0.2.0"
description = "Data predictor for HyperAnalyzer"
readme = "README.md"
authors = [
    {name = "Maksim Shushkevich", email = "m.e.shushkevich@yandex.com"}
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "catboost>=1.2.8",
    "celery>=5.6.2",
    "fastapi>=0.129.0",
    "hypal-utils",
    "numpy>=2.4.1",
    "torch>=2.9.1",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[tool.uv.sources]
hypal-utils = { git = "https://github.com/EE-HyperAnalyzer/hypal-utils.git" }
